tests-integration/tests/roundtrip/invalid/semantic/typecheck/int_in_bool_list/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/int_in_bool_list/int_in_bool_list.essence:3:15:
  |
3 | such that or([x, y])
  |               ^
Type error:
	Expected: bool
	Got: int